refactor: enhance BatchProcessor and MCMPStrategy for improved performance and memory handling feat: add MapUtils for merging StationResult maps refactor: update StationResult to include station name and improve data handling